<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="540dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            style="?android:attr/buttonStyle"
            android:id="@+id/buttonPairing"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/pairing_and_connect"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            style="?android:attr/buttonStyle"
            android:id="@+id/buttonUpdateAddress"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/update_address"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                style="?android:attr/buttonStyle"
                android:id="@+id/buttonOffCommand"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/perform_off_command"
                android:textAllCaps="false"
                android:textColor="@android:color/black" />

            <Button
                style="?android:attr/buttonStyle"
                android:id="@+id/buttonOnCommand"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/perform_on_command"
                android:textAllCaps="false"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewTips"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:layout_margin="5dp"
            android:text="@string/tips_text_initial" />

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="10"
            android:background="#DCDCDC"
            android:text="@string/status_text_initial" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>